--- a/hsinternsorg/app/globals.css
+++ b/hsinternsorg/app/globals.css
@@ -30,3 +30,18 @@
   .fade-in.show {
     opacity: 1;
   }
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  display: flex;
+  white-space: nowrap;
+  animation: marquee 10s linear infinite;
+}
